fixed overflow

--- a/client/src/components/layout/creators.css
+++ b/client/src/components/layout/creators.css
@@ -17,6 +17,7 @@
     height: 100vh;
     width: 100vw;
     z-index: 2;
+    overflow: scroll;
 }
 
 .backgrnd {
